fixed the horizontal scroll overflow issue

--- a/media/cv-screen.css
+++ b/media/cv-screen.css
@@ -59,6 +59,7 @@ body {
 	font-family: Avenir,Verdana,sans-serif;
 	margin-top: 1em;
 	margin-left: 1em;
+	background: #f6f3ea;
 }
 
 p {
@@ -84,7 +85,7 @@ p code {
 }
 
 
-ul { 
+ul {
 	position: relative;
 	left: 25%;
 	width: 75%;
@@ -116,7 +117,7 @@ li ul {
 h1,h2,h3,h4 {
 	font-weight: 400;
 	font-family: Avenir,Cousine,Verdana,sans-serif;
-	width: 80%;
+	/* width: 80%; */
 }
 
 h1 {
@@ -125,6 +126,7 @@ h1 {
 	line-height: 1em;
 	position: relative;
 	left: 25%;
+	width: 55%;
 }
 
 h1+p { 
@@ -168,6 +170,7 @@ a:hover {
 	color: #bc412b;
 	font-family: Monaco,Menlo,monospace,sans-serif;
 	font-size: 100%;
+	width: 55%;
 }
 
 #webaddress a {
@@ -187,7 +190,7 @@ strong {
 	display: none;
 }
 
-
+/* *{border: 1px solid #f00 !important;} Uncomment this for debugging the scroll overflows */
 
 /*
 @media only screen and (max-width: 480px) {
